--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,11 @@
   <groupId>JenkinsBuildExample</groupId>
   <artifactId>JenkinsBuildExample</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-    <dependencies>
-  
+   <properties>
+     <maven.compiler.source>1.8</maven.compiler.source>
+     <maven.compiler.target>1.8</maven.compiler.target>
+</properties>  
+<dependencies>
   <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
@@ -25,4 +28,18 @@
     <version>2.14.1</version>
 </dependency>
   </dependencies>
+    <build>
+  <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M5</version>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>testNg.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin>
+</plugins>
+  </build>
 </project>
